Move math functions to curve library